--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -38,7 +38,7 @@
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils import *\n",
-    "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
+    "from counternet.evaluation import SensitivityMetric, proximity# ProximityMetric\n",
     "from counternet.base_interface import ABCBaseModule, GlobalExplainerBase"
    ]
   },
@@ -637,7 +637,7 @@
     "        # define metrics\n",
     "        self.pred_acc = Accuracy()\n",
     "        self.cf_acc = Accuracy()\n",
-    "        self.proximity = ProximityMetric()\n",
+    "        # self.proximity = ProximityMetric()\n",
     "\n",
     "    def forward(self, x, hard: bool=False):\n",
     "        \"\"\"hard: categorical features in counterfactual is one-hot-encoding or not\"\"\"\n",
@@ -735,9 +735,9 @@
     "\n",
     "        # metrics\n",
     "        metrics = {\n",
-    "            'val/val_loss': loss, 'val/pred_accuracy': self.pred_acc(torch.round(y_hat), y.int()),\n",
-    "            'val/cf_proximity': self.proximity(x, c), 'val/sensitivity': self.sensitivity(x, c, c_y),\n",
-    "            'val/cf_accuracy': self.cf_acc(torch.round(c_y), flip_binary(y_hat).int()),\n",
+    "            'val/val_loss': loss, 'val/pred_accuracy': accuracy(y_hat, y.int()),\n",
+    "            'val/cf_proximity': proximity(x, c), 'val/sensitivity': self.sensitivity(x, c, c_y),\n",
+    "            'val/cf_accuracy': accuracy(torch.round(c_y), flip_binary(y_hat).int()),\n",
     "        }\n",
     "        self.log_dict(metrics, on_step=False, on_epoch=True, sync_dist=True)"
    ]
@@ -822,20 +822,25 @@
     "        assert self.enc_dims[-1] == self.exp_dims[0]\n",
     "\n",
     "        self.encoder_model = MultilayerPerception(self.enc_dims)\n",
-    "        self.predictor = nn.Sequential(\n",
-    "            MultilayerPerception(self.dec_dims),\n",
-    "            nn.Linear(self.dec_dims[-1], 1)\n",
-    "        )\n",
+    "        # predictor\n",
+    "        self.predictor = MultilayerPerception(self.dec_dims)\n",
+    "        self.pred_linear = nn.Linear(self.dec_dims[-1], 1)\n",
+    "        # explainer\n",
+    "        exp_dims = [x for x in self.exp_dims]\n",
+    "        exp_dims[0] = self.exp_dims[0] + self.dec_dims[-1]\n",
+    "\n",
     "        self.explainer = nn.Sequential(\n",
-    "            MultilayerPerception(self.exp_dims),\n",
+    "            MultilayerPerception(exp_dims),\n",
     "            nn.Linear(self.exp_dims[-1], self.enc_dims[0])\n",
     "        )\n",
     "\n",
     "    def model_forward(self, x):\n",
     "        x = self.encoder_model(x)\n",
     "        # predicted y_hat\n",
-    "        y_hat = torch.sigmoid(self.predictor(x))\n",
+    "        pred = self.predictor(x)\n",
+    "        y_hat = torch.sigmoid(self.pred_linear(pred))\n",
     "        # counterfactual example\n",
+    "        x = torch.cat((x, pred), -1)\n",
     "        c = self.explainer(x)\n",
     "        return torch.squeeze(y_hat, -1), c"
    ]
